# Easy_Overlay

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/easy_overlay/: __init__.py  about_dialog.py  app.py  color_picker_dialog.py  config.py  config_store.py  constants.py  overlay_window.py  settings_window.py  tray.py  ui_text.py  win32_overlay.py
